--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,21 +9,18 @@ body {
 .formRegistro {
   width: 50%;
   height: 50%;
-  margin: 20px auto auto auto;
-  padding: 0px 50px 10px 50px;
-  border: 1px solid #000;
-  border-radius: 5px;
+  margin: 3% auto 3% auto;
 }
 .formRegistro img {
   width: 300px;
   height: 300px;
-  margin-top: -80px;
-  margin-left: 27%;
+  margin-top: -10%;
+  /*margin-left: 33.5%;*/
 }
 .formRegistro h3 {
   color: #fff;
   font-weight: bold;
-  text-align: center !important;
+  /*margin-left: 36%;*/
   margin-top: -100px;
   margin-bottom: 50px;
 }
@@ -44,4 +41,13 @@ select::placeholder {
 }
 #reqSpace {
   margin-top: 12% !important;
+}
+.accept {
+  color: #fff;
+  background-color: #00595b;
+  width: 100px !important;
+}
+.accept:hover {
+  color: #fff;
+  background-color: #00aa9b;
 }
