--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header.ejs') %>
-  <a href="#"><img src="./images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
+  <a href="#"><img src="./images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px; margin-bottom: -50px;"></a>
   <% if(message) { %>
     <script>
       $(document).ready(function () {
@@ -8,10 +8,10 @@
     </script>
     <% } %>
 
-      <h3 class='mb-4 mt-5' style="text-align: center;">Minhas solicitações de compras e serviços</h3>
+      <h3 class='display-4 mb-4 mt-5' style="text-align: center;">Minhas Solicitações</h3>
       <div class="form-row justify-content-center">
         <div class="form-group col-md-3">
-          <div class="card" style="width: 96%;">
+          <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
             <img class="card-img-top" src="./images/pendent-folder-cuate.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">PENDENTES</h5>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group col-md-3">
-          <div class="card" style="width: 95%;">
+          <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
             <img class="card-img-top" src="./images/danied-cuate.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">REPROVADOS</h5>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-group col-md-3">
-          <div class="card" style="width: 95%;">
+          <div class="card" style="width: 96%; border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
             <img class="card-img-top" src="./images/aproved-rafiki.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">APROVADOS</h5>
@@ -49,10 +49,11 @@
         </div>
       </div>
 
-      <h3 style="text-align: center; margin-top: 20px;">Últimas solicitações</h3>
-      <table class="table table-responsive-sm table-striped justify-content-center">
+      <hr width="75%">
+      <h3 class="display-4" style="text-align: center; margin-top: 20px;">Últimas Solicitações</h3>
+      <table class="table table-responsive-sm justify-content-center">
         <thead>
-          <tr>
+          <tr style="background-color: #9e9e9e">
             <th scope="col">#</th>
             <th scope="col">Tipo</th>
             <th scope="col">Solicitação</th>
@@ -71,7 +72,7 @@
             year: 'numeric'
             }); %>
 
-            <tr>
+            <tr style="background-color: #dcdcdc26">
               <th scope="row">
                 <%= payment.id %>
               </th>
@@ -98,7 +99,7 @@
                 year: 'numeric'
                 }); %>
 
-                <tr>
+                <tr style="background-color: #dcdcdc81">
                   <th scope="row">
                     <%= purchase.id %>
                   </th>
@@ -143,5 +144,4 @@
           </div>
         </div>
       </div>
-
       <%- include('../partials/footer.ejs') %>
