--- a/views/dashboard/pending.ejs
+++ b/views/dashboard/pending.ejs
@@ -9,7 +9,7 @@
     <% } %>
 
       <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
-      <h1>Solicitações Pendentes</h1>
+      <h1 style="margin-top:18px; font-weight:lighter">Solicitações Pendentes</h1>
 
       <table id="myTable" class="table table-striped table-bordered">
         <thead>
