--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="../../css/sidebar.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
- 
+
 
 </head>
 
@@ -60,34 +60,34 @@
           </li>
         </div>
         <li>
-          <a href="/dashboard"><span class="fa fa-home mr-3"></span> Dashboard</a>
+          <div class="dashimg"> <a href="/dashboard"><img src="../images/icondash.png">Dashboard</a></div>
         </li>
         <li>
-          <a href="/purchases"><span class="fa fa-sticky-note mr-3"></span>Compras/Serviços</a>
+          <div class="dashimg"><a href="/purchases"><img src="../images/carrinho.png"> Compras/Serviços</a></div>
         </li>
         <li>
-          <a href="/payments"><span class="fa fa-sticky-note mr-3"></span>Pagamentos</a>
+          <div class="dashimg"><a href="/payments"><img src="../images/dolar.png">Pagamentos</a></div>
         </li>
         <% if(user.permissions.user_registration==1){ %>
           <li>
-            <a href="/registrations_token"><span class="fa fa-address-book mr-3"></span>Cadastro</a>
+            <div class="dashimg"><a href="/registrations_token"><img src="../images/useradd.png">Cadastro</a></div>
           </li>
           <li>
-            <a href="/users"><span class="fa fa-address-book mr-3""></span>Usuários</a>
-            </li>     
+            <div class="dashimg"><a href="/users"><img src="../images/users.png">Usuários</a></div>
+          </li>
           <% } %>
-       
-          <%  if(user.permissions.supplier_registration == 1){ %>
-          <li>
-            <a href=" /suppliers"><span class="fa fa-address-book mr-3""></span>Fornecedores</a>
-            </li>
-            <li>
-              <a href=" /suppliers_register"><span class="fa fa-address-book mr-3""></span>Cadastrar Fornecedores</a>
-              </li>   
-            <% } %>
-            <li>
-              <a href=" /logout"><span class="fa fa-sign-out mr-3"></span>Logout</a>
-          </li>
+
+            <% if(user.permissions.supplier_registration==1){ %>
+              <li>
+                <div class="dashimg"><a href=" /suppliers"><img src="../images/pacote.png">Fornecedores</a></div>
+              </li>
+              <li>
+                <div class="dashimg"><a href=" /suppliers_register"><img src="../images/addforn.png">Cadastrar Fornecedor</a></div>
+              </li>
+              <% } %>
+                <li>
+                  <div class="dashimg"><a href=" /logout"><img src="../images/logout.png">Logout</a></div>
+                </li>
       </ul>
     </nav>
 
