--- a/views/registrations/recover.ejs
+++ b/views/registrations/recover.ejs
@@ -1,26 +1,26 @@
 <%- include('../partials/header_registrations.ejs') %>
-  <div class="formRegistro" id="reqSpace">
+  <div class="formRegistro" id="reqSpace" style="border: 1px solid #66666646; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.349); padding: 40px 15px 10px 20px;">
     <form action="/recover/password" method="post" accept-charset="utf-8">
-      <div class="form-icon">
+      <div class="form-icon" style="text-align: center;">
         <span><img src="../../../images/icon-white.svg"></span>
         <h3>Recuperação de senha</h3>
       </div>
-      <div class="form-group">
+      <div class="form-group" style="width: 50%; margin-left: auto; margin-right: auto;">
         <input type="text" class="form-control item" name="token" value="<%= token %>" hidden>
       </div>
       <div class="form-group">
         <input type="text" class="form-control item" name="email" value="<%= email %>" hidden>
       </div>
-      <div class="form-group">
+      <div class="form-group" style="width: 50%; margin-left: auto; margin-right: auto;">
         <input type="text" class="form-control item" value="<%= email %>" disabled>
       </div>
-      <div class="form-group">
+      <div class="form-group" style="width: 50%; margin-left: auto; margin-right: auto;">
         <input type="password" class="form-control item" id="senha" name="password" required placeholder="Informe a senha">
       </div>
-      <div class="form-group">
+      <div class="form-group" style="width: 50%; margin-left: auto; margin-right: auto;">
         <input type="password" class="form-control item" id="newsenha" name="newsenha" required placeholder="Repita sua senha">
       </div>
-      <div class="form-group">
+      <div class="form-group" style="margin-top: 5%;">
         <button type="submit" class="btn btn-block create-account btnsis" onclick="return validarSenha()">Alterar</button>
       </div>
     </form>
