--- a/views/suppliers/index.ejs
+++ b/views/suppliers/index.ejs
@@ -10,9 +10,8 @@
     <% } %>
 
       <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
-      <h2 class='mb-4'>Gerenciamento de Fornecedores</h2>
+      <h2 class='mb-4' style="margin-top:25px">Gerenciamento de Fornecedores</h2>
 
-      <br>
       <table id="example" class="table table-striped table-bordered" style="width: 100%">
 
         <thead>
