--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -10,9 +10,8 @@
     <% } %>
       <a href="/dashboard"><img src="../images/icon-white.svg" style="width:180px; height:180px; margin-top:-102px; margin-left: -25px"></a>
 
-      <h2 class='mb-4'>Gerenciamento de Usuários</h2>
+      <h2 class='mb-4' style="margin-top:25px">Gerenciamento de Usuários</h2>
 
-      <br>
       <table id="example" class="table table-striped table-bordered" style="width: 100%">
 
         <thead>
@@ -42,9 +41,9 @@
                   <td> <input id=<%=usuario.id %> type="checkbox" unchecked data-toggle="toggle" data-onstyle="success" data-size="xs"></td>
                   <% } %>
 
-                  <td>
-                    <a href="/permission/<%= usuario.id %>" class="btn btn-warning">Abrir</a>
-                  </td>
+                    <td>
+                      <a href="/permission/<%= usuario.id %>" class="btn btn-warning">Abrir</a>
+                    </td>
 
             </tr>
 
