--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -36,7 +36,7 @@
     </script>
     <% } %>
 
-      <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+      <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto" style="margin-top: 20px !important;">
         <div class="card card0 border-0">
           <div class="row d-flex">
             <div class="col-lg-6">
@@ -78,7 +78,7 @@
                   <small class="or text-center">Or</small>
                   <div class="line"></div>
                 </div>
-                <div class="mt-5">
+                <div class="mt-5" style="margin-top: 15% !important;">
                   <img src="../../images/logo_oficial_sf.png" id="iconLogin">
                   <form action="/authenticate" method="post">
                     <div class="row px-3">
